Code Cleanup, Text Effects
Re-did the text renderer to add outlines and glow, and cleaned up some code to make expansion more consistent

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ LauncherEditor/.vs
 LauncherEditor/bin
 LauncherEditor/obj
 *.user
+LauncherEditor/ResourceHacker.exe
+LauncherEditor/ResourceHacker.ini
+LauncherEditor/ResourceHacker.log
