--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ LauncherEditor/obj
 LauncherEditor/ResourceHacker.exe
 LauncherEditor/ResourceHacker.ini
 LauncherEditor/ResourceHacker.log
+LauncherEditor/Fallout 3
+LauncherEditor/Fallout New Vegas
+LauncherEditor/Fallout 4
