--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+Originals/Fallout2Launcher/.vs
+Originals/Fallout2Launcher/bin
+Originals/Fallout2Launcher/obj
+Originals/FalloutLauncher/.vs
+Originals/FalloutLauncher/bin
+Originals/FalloutLauncher/obj
+Originals/TacticsLauncher/.vs
+Originals/TacticsLauncher/bin
+Originals/TacticsLauncher/obj
 Fallout2Launcher/.vs
 Fallout2Launcher/bin
 Fallout2Launcher/obj
